--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "babel-preset-react": "^6.16.0",
     "imports-loader": "^0.6.5",
     "lodash": "^4.16.4",
+    "moment": "^2.15.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-masonry-component": "^4.3.0",
     "react-modal": "^1.5.2",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
+    "react-smart-time-ago": "^1.0.5",
     "redux": "^3.6.0",
     "webpack": "^1.13.3"
   }
